--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.5",
     "popper.js": "^1.16.1",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -25,10 +26,13 @@
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.3",
     "react-data-table-component": "^7.6.2",
+    "react-dropzone": "^14.2.3",
     "react-h5-audio-player": "^3.9.1",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
